tests/NormalTests/paczka1/fuzzy1/36990275.err
Error in line 16: Qc0Yj9SK A317 65,4
Error in line 23: 9Y7ahd A318 2,6
